--- a/src/output.css
+++ b/src/output.css
@@ -608,10 +608,6 @@ video {
   bottom: 5rem;
 }
 
-.bottom-5 {
-  bottom: 1.25rem;
-}
-
 .end-16 {
   inset-inline-end: 4rem;
 }
@@ -624,12 +620,12 @@ video {
   left: 5rem;
 }
 
-.right-0 {
-  right: 0px;
+.left-6 {
+  left: 1.5rem;
 }
 
-.right-4 {
-  right: 1rem;
+.right-0 {
+  right: 0px;
 }
 
 .right-8 {
@@ -668,60 +664,12 @@ video {
   top: 1rem;
 }
 
-.top-\[50px\] {
-  top: 50px;
-}
-
 .top-\[calc\(50\%-27px\)\] {
   top: calc(50% - 27px);
 }
 
-.left-12 {
-  left: 3rem;
-}
-
-.left-5 {
-  left: 1.25rem;
-}
-
-.left-52 {
-  left: 13rem;
-}
-
-.left-60 {
-  left: 15rem;
-}
-
-.left-56 {
-  left: 14rem;
-}
-
-.left-48 {
-  left: 12rem;
-}
-
-.top-12 {
-  top: 3rem;
-}
-
-.top-14 {
-  top: 3.5rem;
-}
-
-.left-36 {
-  left: 9rem;
-}
-
-.left-40 {
-  left: 10rem;
-}
-
-.left-64 {
-  left: 16rem;
-}
-
-.left-6 {
-  left: 1.5rem;
+.top-28 {
+  top: 7rem;
 }
 
 .isolate {
@@ -746,6 +694,14 @@ video {
 
 .col-span-6 {
   grid-column: span 6 / span 6;
+}
+
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
+.col-span-1 {
+  grid-column: span 1 / span 1;
 }
 
 .col-start-1 {
@@ -778,10 +734,6 @@ video {
 
 .row-end-2 {
   grid-row-end: 2;
-}
-
-.-m-1\.5 {
-  margin: -0.375rem;
 }
 
 .-mx-3 {
@@ -844,12 +796,20 @@ video {
   margin-bottom: 2rem;
 }
 
+.me-8 {
+  margin-inline-end: 2rem;
+}
+
 .ml-2 {
   margin-left: 0.5rem;
 }
 
 .ml-4 {
   margin-left: 1rem;
+}
+
+.ml-6 {
+  margin-left: 1.5rem;
 }
 
 .mr-2 {
@@ -872,6 +832,10 @@ video {
   margin-top: 1rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -888,35 +852,8 @@ video {
   margin-top: auto;
 }
 
-.mb-32 {
-  margin-bottom: 8rem;
-}
-
-.mb-44 {
-  margin-bottom: 11rem;
-}
-
-.me-8 {
-  margin-inline-end: 2rem;
-}
-
-.ml-6 {
-  margin-left: 1.5rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.line-clamp-2 {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
+.box-border {
+  box-sizing: border-box;
 }
 
 .block {
@@ -991,6 +928,10 @@ video {
   height: 9rem;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
 .h-7 {
   height: 1.75rem;
 }
@@ -1035,6 +976,10 @@ video {
   height: 400px;
 }
 
+.h-\[40px\] {
+  height: 40px;
+}
+
 .h-\[45\%\] {
   height: 45%;
 }
@@ -1075,24 +1020,8 @@ video {
   height: 100vh;
 }
 
-.h-20 {
-  height: 5rem;
-}
-
-.h-\[30px\] {
-  height: 30px;
-}
-
-.h-\[40px\] {
-  height: 40px;
-}
-
-.h-\[450px\] {
-  height: 450px;
-}
-
-.h-5 {
-  height: 1.25rem;
+.h-60 {
+  height: 15rem;
 }
 
 .max-h-\[100px\] {
@@ -1115,10 +1044,6 @@ video {
   max-height: 800px;
 }
 
-.max-h-\[50px\] {
-  max-height: 50px;
-}
-
 .min-h-full {
   min-height: 100%;
 }
@@ -1137,6 +1062,18 @@ video {
 
 .w-14 {
   width: 3.5rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-44 {
+  width: 11rem;
+}
+
+.w-5 {
+  width: 1.25rem;
 }
 
 .w-52 {
@@ -1159,16 +1096,16 @@ video {
   width: 20%;
 }
 
-.w-\[200px\] {
-  width: 200px;
-}
-
 .w-\[70\%\] {
   width: 70%;
 }
 
 .w-\[75\%\] {
   width: 75%;
+}
+
+.w-\[80px\] {
+  width: 80px;
 }
 
 .w-auto {
@@ -1183,44 +1120,8 @@ video {
   width: 100vw;
 }
 
-.w-48 {
-  width: 12rem;
-}
-
-.w-32 {
-  width: 8rem;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-3 {
-  width: 0.75rem;
-}
-
-.w-36 {
-  width: 9rem;
-}
-
-.w-40 {
-  width: 10rem;
-}
-
-.w-44 {
-  width: 11rem;
-}
-
-.w-\[50px\] {
-  width: 50px;
-}
-
-.w-\[80px\] {
-  width: 80px;
-}
-
-.w-5 {
-  width: 1.25rem;
+.w-60 {
+  width: 15rem;
 }
 
 .max-w-2xl {
@@ -1231,6 +1132,10 @@ video {
   max-width: 48rem;
 }
 
+.max-w-4xl {
+  max-width: 56rem;
+}
+
 .max-w-6xl {
   max-width: 72rem;
 }
@@ -1239,24 +1144,16 @@ video {
   max-width: 18rem;
 }
 
+.max-w-7xl {
+  max-width: 80rem;
+}
+
 .max-w-\[40px\] {
   max-width: 40px;
 }
 
 .max-w-full {
   max-width: 100%;
-}
-
-.max-w-4xl {
-  max-width: 56rem;
-}
-
-.max-w-7xl {
-  max-width: 80rem;
-}
-
-.max-w-\[50px\] {
-  max-width: 50px;
 }
 
 .flex-1 {
@@ -1297,10 +1194,6 @@ video {
   cursor: pointer;
 }
 
-.list-decimal {
-  list-style-type: decimal;
-}
-
 .list-disc {
   list-style-type: disc;
 }
@@ -1317,8 +1210,8 @@ video {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.grid-cols-7 {
-  grid-template-columns: repeat(7, minmax(0, 1fr));
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .grid-rows-1 {
@@ -1371,10 +1264,6 @@ video {
 
 .gap-6 {
   gap: 1.5rem;
-}
-
-.gap-px {
-  gap: 1px;
 }
 
 .gap-x-2 {
@@ -1524,22 +1413,6 @@ video {
   border-bottom-right-radius: 0.375rem;
 }
 
-.rounded-bl-lg {
-  border-bottom-left-radius: 0.5rem;
-}
-
-.rounded-br-lg {
-  border-bottom-right-radius: 0.5rem;
-}
-
-.rounded-tl-lg {
-  border-top-left-radius: 0.5rem;
-}
-
-.rounded-tr-lg {
-  border-top-right-radius: 0.5rem;
-}
-
 .border {
   border-width: 1px;
 }
@@ -1556,10 +1429,6 @@ video {
   border-left-width: 4px;
 }
 
-.border-t {
-  border-top-width: 1px;
-}
-
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
@@ -1572,16 +1441,6 @@ video {
 
 .border-transparent {
   border-color: transparent;
-}
-
-.border-gray-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity, 1));
-}
-
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gray-400 {
@@ -1598,19 +1457,14 @@ video {
   background-color: rgb(107 114 128 / 0.25);
 }
 
-.bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity, 1));
-}
-
-.bg-indigo-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(79 70 229 / var(--tw-bg-opacity, 1));
-}
-
 .bg-lightGray {
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
 .bg-subPurple {
@@ -1625,26 +1479,6 @@ video {
 
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
-}
-
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
-}
-
-.bg-mainYellow {
-  --tw-bg-opacity: 1;
-  background-color: rgb(212 251 113 / var(--tw-bg-opacity, 1));
-}
-
-.bg-yellow-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 249 195 / var(--tw-bg-opacity, 1));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
 .bg-banner {
@@ -1700,10 +1534,6 @@ video {
      object-fit: cover;
 }
 
-.p-1\.5 {
-  padding: 0.375rem;
-}
-
 .p-2 {
   padding: 0.5rem;
 }
@@ -1728,12 +1558,13 @@ video {
   padding: 2rem;
 }
 
-.p-\[10px\] {
-  padding: 10px;
+.p-14 {
+  padding: 3.5rem;
 }
 
-.p-12 {
-  padding: 3rem;
+.px-14 {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
 }
 
 .px-2 {
@@ -1754,11 +1585,6 @@ video {
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
-}
-
-.py-1\.5 {
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
 }
 
 .py-10 {
@@ -1801,52 +1627,16 @@ video {
   padding-bottom: 2rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.py-24 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-}
-
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
-
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
-}
-
-.px-14 {
-  padding-left: 3.5rem;
-  padding-right: 3.5rem;
-}
-
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
 .pb-20 {
   padding-bottom: 5rem;
 }
 
 .pb-4 {
   padding-bottom: 1rem;
+}
+
+.pb-40 {
+  padding-bottom: 10rem;
 }
 
 .pb-5 {
@@ -1921,26 +1711,6 @@ video {
   padding-top: 6%;
 }
 
-.pr-12 {
-  padding-right: 3rem;
-}
-
-.ps-12 {
-  padding-inline-start: 3rem;
-}
-
-.ps-4 {
-  padding-inline-start: 1rem;
-}
-
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pb-40 {
-  padding-bottom: 10rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -1980,6 +1750,11 @@ video {
   line-height: 2.5rem;
 }
 
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .text-\[10px\] {
   font-size: 10px;
 }
@@ -1996,6 +1771,10 @@ video {
   font-size: 16px;
 }
 
+.text-\[20px\] {
+  font-size: 20px;
+}
+
 .text-\[70px\] {
   font-size: 70px;
 }
@@ -2003,6 +1782,11 @@ video {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-base\/7 {
+  font-size: 1rem;
+  line-height: 1.75rem;
 }
 
 .text-lg {
@@ -2020,30 +1804,6 @@ video {
   line-height: 1.5rem;
 }
 
-.text-xs\/6 {
-  font-size: 0.75rem;
-  line-height: 1.5rem;
-}
-
-.text-base\/7 {
-  font-size: 1rem;
-  line-height: 1.75rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-\[20px\] {
-  font-size: 20px;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -2054,34 +1814,6 @@ video {
 
 .font-semibold {
   font-weight: 600;
-}
-
-.leading-3 {
-  line-height: .75rem;
-}
-
-.leading-6 {
-  line-height: 1.5rem;
-}
-
-.leading-8 {
-  line-height: 2rem;
-}
-
-.leading-relaxed {
-  line-height: 1.625;
-}
-
-.leading-5 {
-  line-height: 1.25rem;
-}
-
-.leading-10 {
-  line-height: 2.5rem;
-}
-
-.leading-4 {
-  line-height: 1rem;
 }
 
 .leading-loose {
@@ -2131,11 +1863,6 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity, 1));
 }
 
-.text-indigo-600 {
-  --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity, 1));
-}
-
 .text-lightGray {
   --tw-text-opacity: 1;
   color: rgb(245 245 245 / var(--tw-text-opacity, 1));
@@ -2159,55 +1886,6 @@ video {
 .text-yellow-400 {
   --tw-text-opacity: 1;
   color: rgb(250 204 21 / var(--tw-text-opacity, 1));
-}
-
-.text-red-700 {
-  --tw-text-opacity: 1;
-  color: rgb(185 28 28 / var(--tw-text-opacity, 1));
-}
-
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
-}
-
-.text-red-600 {
-  --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity, 1));
-}
-
-.text-\[\] {
-  color: ;
-}
-
-.text-red-300 {
-  --tw-text-opacity: 1;
-  color: rgb(252 165 165 / var(--tw-text-opacity, 1));
-}
-
-.text-red-400 {
-  --tw-text-opacity: 1;
-  color: rgb(248 113 113 / var(--tw-text-opacity, 1));
-}
-
-.text-yellow-500 {
-  --tw-text-opacity: 1;
-  color: rgb(234 179 8 / var(--tw-text-opacity, 1));
-}
-
-.text-yellow-100 {
-  --tw-text-opacity: 1;
-  color: rgb(254 249 195 / var(--tw-text-opacity, 1));
-}
-
-.text-gray-100 {
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity, 1));
-}
-
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity, 1));
 }
 
 .opacity-50 {
@@ -2255,11 +1933,6 @@ video {
 
 .ring-inset {
   --tw-ring-inset: inset;
-}
-
-.ring-gray-200 {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity, 1));
 }
 
 .ring-gray-300 {
@@ -2358,24 +2031,9 @@ video {
   border-color: rgb(212 251 113 / var(--tw-border-opacity, 1));
 }
 
-.hover\:bg-gray-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-indigo-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(99 102 241 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-indigo-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(67 56 202 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-lightGray:hover {
@@ -2398,14 +2056,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-blue-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(29 78 216 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-gray-600:hover {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity, 1));
 }
 
 .hover\:text-gray-700:hover {
@@ -2438,25 +2096,8 @@ video {
   color: rgb(140 171 251 / var(--tw-text-opacity, 1));
 }
 
-.hover\:text-gray-600:hover {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity, 1));
-}
-
-.hover\:text-lightGray\/50:hover {
-  color: rgb(245 245 245 / 0.5);
-}
-
 .hover\:opacity-50:hover {
   opacity: 0.5;
-}
-
-.hover\:opacity-80:hover {
-  opacity: 0.8;
-}
-
-.focus\:z-10:focus {
-  z-index: 10;
 }
 
 .focus\:z-20:focus {
@@ -2476,16 +2117,6 @@ video {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-indigo-500:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity, 1));
-}
-
-.focus\:ring-blue-500:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity, 1));
 }
 
 .focus\:ring-subPurple:focus {
@@ -2513,10 +2144,6 @@ video {
   outline-offset: 2px;
 }
 
-.focus-visible\:outline-indigo-600:focus-visible {
-  outline-color: #4f46e5;
-}
-
 .active\:bg-opacity-50:active {
   --tw-bg-opacity: 0.5;
 }
@@ -2534,10 +2161,6 @@ video {
   opacity: 0.6;
 }
 
-.active\:opacity-30:active {
-  opacity: 0.3;
-}
-
 .group:hover .group-hover\:ms-\[5px\] {
   margin-inline-start: 5px;
 }
@@ -2552,10 +2175,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:visible {
-    visibility: visible;
-  }
-
   .sm\:invisible {
     visibility: hidden;
   }
@@ -2570,10 +2189,6 @@ video {
 
   .sm\:order-1 {
     order: 1;
-  }
-
-  .sm\:col-span-2 {
-    grid-column: span 2 / span 2;
   }
 
   .sm\:my-8 {
@@ -2593,20 +2208,12 @@ video {
     margin-top: 0.5rem;
   }
 
-  .sm\:mt-0 {
-    margin-top: 0px;
-  }
-
   .sm\:block {
     display: block;
   }
 
   .sm\:flex {
     display: flex;
-  }
-
-  .sm\:grid {
-    display: grid;
   }
 
   .sm\:hidden {
@@ -2650,16 +2257,8 @@ video {
     justify-content: flex-start;
   }
 
-  .sm\:justify-between {
-    justify-content: space-between;
-  }
-
   .sm\:gap-0 {
     gap: 0px;
-  }
-
-  .sm\:gap-4 {
-    gap: 1rem;
   }
 
   .sm\:gap-x-6 {
@@ -2722,36 +2321,6 @@ video {
     padding-bottom: 6rem;
   }
 
-  .sm\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
-  .sm\:py-32 {
-    padding-top: 8rem;
-    padding-bottom: 8rem;
-  }
-
-  .sm\:py-20 {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-  }
-
-  .sm\:py-16 {
-    padding-top: 4rem;
-    padding-bottom: 4rem;
-  }
-
-  .sm\:py-8 {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-  }
-
-  .sm\:py-6 {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-  }
-
   .sm\:pb-6 {
     padding-bottom: 1.5rem;
   }
@@ -2782,16 +2351,6 @@ video {
     line-height: 1.75rem;
   }
 
-  .sm\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
-  .sm\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
   .sm\:transition-opacity {
     transition-property: opacity;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -2802,10 +2361,6 @@ video {
 @media (min-width: 768px) {
   .md\:visible {
     visibility: visible;
-  }
-
-  .md\:invisible {
-    visibility: hidden;
   }
 
   .md\:left-64 {
@@ -2828,84 +2383,20 @@ video {
     top: 11rem;
   }
 
-  .md\:left-0 {
-    left: 0px;
+  .md\:left-6 {
+    left: 1.5rem;
   }
 
-  .md\:-top-5 {
-    top: -1.25rem;
+  .md\:left-7 {
+    left: 1.75rem;
   }
 
-  .md\:-top-8 {
-    top: -2rem;
+  .md\:left-72 {
+    left: 18rem;
   }
 
-  .md\:-top-6 {
-    top: -1.5rem;
-  }
-
-  .md\:-top-7 {
-    top: -1.75rem;
-  }
-
-  .md\:left-12 {
-    left: 3rem;
-  }
-
-  .md\:left-24 {
-    left: 6rem;
-  }
-
-  .md\:left-32 {
-    left: 8rem;
-  }
-
-  .md\:left-36 {
-    left: 9rem;
-  }
-
-  .md\:left-80 {
-    left: 20rem;
-  }
-
-  .md\:left-96 {
-    left: 24rem;
-  }
-
-  .md\:-top-0 {
-    top: -0px;
-  }
-
-  .md\:left-\[\] {
-    left: ;
-  }
-
-  .md\:left-\[123px\] {
-    left: 123px;
-  }
-
-  .md\:left-\[300px\] {
-    left: 300px;
-  }
-
-  .md\:left-\[500px\] {
-    left: 500px;
-  }
-
-  .md\:left-\[400px\] {
-    left: 400px;
-  }
-
-  .md\:-top-1 {
-    top: -0.25rem;
-  }
-
-  .md\:top-1 {
-    top: 0.25rem;
-  }
-
-  .md\:left-\[420px\] {
-    left: 420px;
+  .md\:mb-0 {
+    margin-bottom: 0px;
   }
 
   .md\:mb-16 {
@@ -2922,10 +2413,6 @@ video {
 
   .md\:mb-8 {
     margin-bottom: 2rem;
-  }
-
-  .md\:mb-0 {
-    margin-bottom: 0px;
   }
 
   .md\:block {
@@ -2952,6 +2439,10 @@ video {
     height: 250px;
   }
 
+  .md\:h-\[350px\] {
+    height: 350px;
+  }
+
   .md\:h-\[450px\] {
     height: 450px;
   }
@@ -2962,14 +2453,6 @@ video {
 
   .md\:h-\[700px\] {
     height: 700px;
-  }
-
-  .md\:h-\[300px\] {
-    height: 300px;
-  }
-
-  .md\:h-\[350px\] {
-    height: 350px;
   }
 
   .md\:max-h-\[600px\] {
@@ -3093,20 +2576,8 @@ video {
     grid-column-start: 2;
   }
 
-  .lg\:col-start-8 {
-    grid-column-start: 8;
-  }
-
-  .lg\:col-end-13 {
-    grid-column-end: 13;
-  }
-
   .lg\:row-span-2 {
     grid-row: span 2 / span 2;
-  }
-
-  .lg\:row-start-1 {
-    grid-row-start: 1;
   }
 
   .lg\:row-start-2 {
@@ -3131,10 +2602,6 @@ video {
 
   .lg\:mt-0 {
     margin-top: 0px;
-  }
-
-  .lg\:mt-9 {
-    margin-top: 2.25rem;
   }
 
   .lg\:block {
@@ -3232,6 +2699,11 @@ video {
     padding: 5rem;
   }
 
+  .lg\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
   .lg\:px-60 {
     padding-left: 15rem;
     padding-right: 15rem;
@@ -3247,24 +2719,8 @@ video {
     padding-bottom: 2rem;
   }
 
-  .lg\:py-40 {
-    padding-top: 10rem;
-    padding-bottom: 10rem;
-  }
-
-  .lg\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-
-  .lg\:py-20 {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-  }
-
-  .lg\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
+  .lg\:pt-4 {
+    padding-top: 1rem;
   }
 
   .lg\:pt-\[150px\] {
@@ -3277,10 +2733,6 @@ video {
 
   .lg\:pt-\[5\%\] {
     padding-top: 5%;
-  }
-
-  .lg\:pt-4 {
-    padding-top: 1rem;
   }
 
   .lg\:text-2xl {
@@ -3319,10 +2771,6 @@ video {
 }
 
 @media (min-width: 1280px) {
-  .xl\:col-start-9 {
-    grid-column-start: 9;
-  }
-
   .xl\:max-w-7xl {
     max-width: 80rem;
   }
